@@ -1,6 +1,10 @@
-# Please keep this file sorted alphabetically.
 # Add files with translateable strings here.
+# Please keep this file sorted alphabetically.
 [encoding: UTF-8]
+capplets/about-me/e-image-chooser.c
+capplets/about-me/gnome-about-me-password.c
+capplets/about-me/gnome-about-me.c
+capplets/about-me/gnome-about-me.glade
 capplets/accessibility/at-properties/at-enable-dialog.glade
 capplets/accessibility/at-properties/at-properties.desktop.in.in
 capplets/accessibility/at-properties/main.c
@@ -19,15 +23,15 @@ capplets/common/capplet-util.c
 capplets/common/file-transfer-dialog.c
 capplets/common/gconf-property-editor.c
 capplets/default-applications/default-applications.desktop.in.in
+capplets/default-applications/gnome-default-applications-properties-structs.c
 capplets/default-applications/gnome-default-applications-properties.c
 capplets/default-applications/gnome-default-applications-properties.glade
-capplets/default-applications/gnome-default-applications-properties-structs.c
 capplets/display/display-properties.desktop.in.in
 capplets/display/main.c
 capplets/file-types/file-types-capplet.c
 capplets/file-types/file-types-capplet.desktop.in.in
-capplets/file-types/file-types.desktop.in.in
 capplets/file-types/file-types-properties.glade
+capplets/file-types/file-types.desktop.in.in
 capplets/file-types/mime-category-edit-dialog.c
 capplets/file-types/mime-edit-dialog.c
 capplets/file-types/mime-type-info.c
@@ -41,11 +45,12 @@ capplets/keybindings/eggcellrendererkeys.c
 capplets/keybindings/gnome-keybinding-properties.c
 capplets/keybindings/gnome-keybinding-properties.glade
 capplets/keybindings/keybinding.desktop.in.in
-capplets/keyboard/gnome-keyboard-properties.c
-capplets/keyboard/gnome-keyboard-properties.glade
 capplets/keyboard/gnome-keyboard-properties-xkb.c
+capplets/keyboard/gnome-keyboard-properties-xkblt.c
 capplets/keyboard/gnome-keyboard-properties-xkbmc.c
 capplets/keyboard/gnome-keyboard-properties-xkbpv.c
+capplets/keyboard/gnome-keyboard-properties.c
+capplets/keyboard/gnome-keyboard-properties.glade
 capplets/keyboard/keyboard.desktop.in.in
 capplets/localization/localization.desktop.in.in
 capplets/mouse/gnome-mouse-properties.c
@@ -68,13 +73,14 @@ capplets/ui-properties/gnome-ui-properties.c
 capplets/ui-properties/gnome-ui-properties.desktop.in.in
 capplets/ui-properties/gnome-ui-properties.glade
 capplets/url-properties/url-properties.desktop.in.in
+capplets/url-properties/url.desktop.in.in
 capplets/windows/gnome-window-properties.c
 capplets/windows/gnome-window-properties.glade
 capplets/windows/window-properties.desktop.in.in
-control-center/control-center.c
-control-center/control-center-categories.c
-control-center/gnomecc.desktop.in.in
 control-center/GNOME_ControlCenter.server.in
+control-center/control-center-categories.c
+control-center/control-center.c
+control-center/gnomecc.desktop.in.in
 gnome-settings-daemon/actions/acme.glade
 gnome-settings-daemon/factory.c
 gnome-settings-daemon/gnome-settings-accessibility-keyboard.c
@@ -100,15 +106,15 @@ schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in
 typing-break/drw-break-window.c
 typing-break/drwright.c
 typing-break/main.c
+vfs-methods/fontilus/font-view.c
 vfs-methods/fontilus/fontilus-context-menu.c
 vfs-methods/fontilus/fontilus.schemas.in
-vfs-methods/fontilus/font-view.c
 vfs-methods/fontilus/gnome-font-viewer.desktop.in.in
 vfs-methods/themus/apply-font.glade
 vfs-methods/themus/theme-method.c
 vfs-methods/themus/theme-method.directory.in
 vfs-methods/themus/themus-properties-main.c
 vfs-methods/themus/themus-properties-view.c
-vfs-methods/themus/themus.schemas.in
 vfs-methods/themus/themus-theme-applier.c
 vfs-methods/themus/themus-theme-applier.desktop.in.in
+vfs-methods/themus/themus.schemas.in
