@@ -5,7 +5,6 @@ archiver/main.c
 capplets/file-types/file-types-icon-entry.c
 capplets/localization/gnome-localization-properties.c
 capplets/localization/gnome-localization-properties.glade
-capplets/localization/localization.desktop.in
 capplets/mime-type/edit-window.c
 capplets/mime-type/mime-data.c
 capplets/mime-type/mime-info.c
@@ -16,8 +15,6 @@ capplets/rollback/main.c
 capplets/rollback/rollback-capplet-dialog.c
 capplets/rollback/rollback.desktop.in.in
 capplets/url-properties/url-properties.c
-capplets/url-properties/url-properties.desktop.in
-capplets/url-properties/url.desktop.in.in
 capplets/wm-properties/wm-desktops/Enlightenment.desktop.in.in
 capplets/wm-properties/wm-desktops/IceWM.desktop.in.in
 capplets/wm-properties/wm-desktops/Scwm.desktop.in.in
@@ -25,19 +22,6 @@ capplets/wm-properties/wm-desktops/WindowMaker.desktop.in.in
 capplets/wm-properties/wm-desktops/twm.desktop.in.in
 capplets/wm-properties/wm-properties-capplet.c
 capplets/wm-properties/wm.desktop.in.in
-capplets/desktop-links/Sawfish/Sawfish.directory.in.in
-capplets/desktop-links/Sawfish/appearance-properties.desktop.in
-capplets/desktop-links/Sawfish/bindings-properties.desktop.in
-capplets/desktop-links/Sawfish/focus-properties.desktop.in
-capplets/desktop-links/Sawfish/match-properties.desktop.in
-capplets/desktop-links/Sawfish/maximize-properties.desktop.in
-capplets/desktop-links/Sawfish/meta-properties.desktop.in
-capplets/desktop-links/Sawfish/misc-properties.desktop.in
-capplets/desktop-links/Sawfish/move-properties.desktop.in
-capplets/desktop-links/Sawfish/placement-properties.desktop.in
-capplets/desktop-links/Sawfish/sound-properties.desktop.in
-capplets/desktop-links/Sawfish/workspace-properties.desktop.in
-capplets/desktop-links/legacy-applications.desktop.in.in
 gnome-settings-daemon/GNOME_SettingsDaemon.server.in
 root-manager/root-manager-helper.c
 root-manager/root-manager-wrap.c
